--- a/index.html
+++ b/index.html
@@ -11,11 +11,65 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        * {
+            /* border: 1px solid black; */
+        }
+    </style>
 
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+
+
+    <main id="login-main">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 login-form-frame">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="logo-frame">
+                            <img src="images/logo-pos.png" alt="Logo POS">
+                        </div>
+                        <p>Silahkan login untuk mengakses halaman dashboard</p>
+                    </div>
+
+                    <br>
+
+                    <div class="row">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
+                                    anyone
+                                    else.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                    placeholder="Password">
+                            </div>
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Ingat Saya</label>
+                            </div>
+                            <button type="button" class="btn btn-primary bg-default btn-lg btn-block"
+                                id="button-login">Login</button>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 login-image-frame">
+
+            </div>
+        </div>
+    </main>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
