Tambahin Lupa Password

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="logo-frame">
                             <img src="images/logo-pos.png" alt="Logo POS">
                         </div>
-                        <p>Silahkan login untuk mengakses halaman dashboard</p>
+                        <p class="color-default">Silahkan login untuk mengakses halaman dashboard</p>
                     </div>
 
                     <br>
@@ -41,21 +41,20 @@
                     <div class="row">
                         <form>
                             <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
+                                <label for="exampleInputEmail1">Username</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
-                                    anyone
-                                    else.</small>
+                                    aria-describedby="emailHelp" placeholder="Username">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Password</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1"
                                     placeholder="Password">
                             </div>
+                            <br>
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">Ingat Saya</label>
+                                <a href="" class="float-right">Lupa Password ?</a>
                             </div>
                             <button type="button" class="btn btn-primary bg-default btn-lg btn-block"
                                 id="button-login">Login</button>
