--- a/index.html
+++ b/index.html
@@ -39,24 +39,31 @@
                     <br>
 
                     <div class="row">
-                        <form>
+                        <form id="login-form" class="login-form" novalidate>
                             <div class="form-group">
-                                <label for="exampleInputEmail1">Username</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Username">
+                                <label for="input-username">Username</label>
+                                <input type="text" class="form-control" id="input-username" placeholder="Username"
+                                    required>
+                                <div class="invalid-feedback">
+                                    Username tidak boleh kosong.
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1"
-                                    placeholder="Password">
+                                <label for="input-password">Password</label>
+                                <input type="password" class="form-control" id="input-password" placeholder="Password"
+                                    required>
+                                <div class="invalid-feedback">
+                                    Password tidak boleh kosong.
+                                </div>
                             </div>
                             <br>
                             <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Ingat Saya</label>
+                                <input type="checkbox" class="form-check-input" id="ingat-saya">
+                                <label class="form-check-label" for="ingat-saya" id="label-ingat-saya">Ingat
+                                    Saya</label>
                                 <a href="" class="float-right">Lupa Password ?</a>
                             </div>
-                            <button type="button" class="btn btn-primary bg-default btn-lg btn-block"
+                            <button type="submit" class="btn btn-primary bg-default btn-lg btn-block"
                                 id="button-login">Login</button>
                         </form>
                     </div>
@@ -83,6 +90,7 @@
         crossorigin="anonymous"></script> -->
 
     <script src="js/bootstrap.min.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
