--- a/pegawai.html
+++ b/pegawai.html
@@ -17,7 +17,7 @@
 
     <style>
         * {
-            border: 1px solid black;
+            /* border: 1px solid black; */
         }
     </style>
 
@@ -93,11 +93,73 @@
 
         <div id="content">
 
-            <nav>
-
+            <nav class="clearfix">
+                <div class="float-left">
+                    <div class="btn-menu flex-center" id="sidebarCollapse">
+                        <i class="material-icons">menu</i>
+                    </div>
+                </div>
+                <div class="float-right">
+                    <div class="float-right user-frame">
+                        <div class="user-image-frame flex-center">
+                            <img src="images/user.png" alt="user">
+                        </div>
+                        <div class="user-detail-frame">
+                            <h5>Fulan bin Fulan </h5>
+                            <p>Toko (Master)</p>
+                        </div>
+                    </div>
+                    <div class="float-right menu-right flex-center notification-frame">
+                        <i class="material-icons">notifications</i>
+                        <div class="notification-count flex-center"><span>3</span></div>
+                    </div>
+                    <div class="float-right menu-right flex-center">
+                        <i class="material-icons">search</i>
+                    </div>
+                </div>
             </nav>
 
             <div class="wrapper">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
+                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
+                blanditiis ullam quos!
+
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
                 Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
                 blanditiis ullam quos!
