card + table + pagination

--- a/pegawai.html
+++ b/pegawai.html
@@ -93,7 +93,7 @@
 
         <div id="content">
 
-            <nav class="clearfix">
+            <nav class="nav-menu clearfix">
                 <div class="float-left">
                     <div class="btn-menu flex-center" id="sidebarCollapse">
                         <i class="material-icons">menu</i>
@@ -120,109 +120,140 @@
             </nav>
 
             <div class="wrapper">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
+                <div class="header-content">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-8">
+                            <h3>Halaman Pegawai</h3>
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Pegawai</li>
+                                </ol>
+                            </nav>
+                        </div>
+                        <div class="col-sm-12 col-md-4 button-add-frame">
+                            <button type="button" class="btn btn-primary btn-lg">Tambah Pegawai</button>
+                        </div>
+                    </div>
+                </div>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
+                <div class="card">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">First</th>
+                                    <th scope="col">Last</th>
+                                    <th scope="col">Handle</th>
+                                    <th scope="col">First</th>
+                                    <th scope="col">Last</th>
+                                    <th scope="col">Handle</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td class="action-frame">
+                                        <button type="button" class="btn btn-success waves-effect waves-light">
+                                            <i class="material-icons">edit</i>
+                                        </button>
+                                        <button type="button" class="btn btn-danger waves-effect waves-light">
+                                            <i class="material-icons">delete</i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td class="action-frame">
+                                        <button type="button" class="btn btn-success waves-effect waves-light">
+                                            <i class="material-icons">edit</i>
+                                        </button>
+                                        <button type="button" class="btn btn-danger waves-effect waves-light">
+                                            <i class="material-icons">delete</i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td class="action-frame">
+                                        <button type="button" class="btn btn-success waves-effect waves-light">
+                                            <i class="material-icons">edit</i>
+                                        </button>
+                                        <button type="button" class="btn btn-danger waves-effect waves-light">
+                                            <i class="material-icons">delete</i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td class="action-frame">
+                                        <button type="button" class="btn btn-success waves-effect waves-light">
+                                            <i class="material-icons">edit</i>
+                                        </button>
+                                        <button type="button" class="btn btn-danger waves-effect waves-light">
+                                            <i class="material-icons">delete</i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">5</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                    <td class="action-frame">
+                                        <button type="button" class="btn btn-success waves-effect waves-light">
+                                            <i class="material-icons">edit</i>
+                                        </button>
+                                        <button type="button" class="btn btn-danger waves-effect waves-light">
+                                            <i class="material-icons">delete</i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination float-right">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla explicabo repellendus velit labore.
-                Ipsum esse ut quisquam? Provident culpa eos quisquam, praesentium eveniet adipisci recusandae illo
-                blanditiis ullam quos!
+                </div>
             </div>
 
         </div>
