penambahan modal tambah pegawai

--- a/pegawai.html
+++ b/pegawai.html
@@ -133,7 +133,8 @@
                             </nav>
                         </div>
                         <div class="col-sm-12 col-md-4 button-add-frame">
-                            <button type="button" class="btn btn-primary btn-lg">Tambah Pegawai</button>
+                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal"
+                                data-target="#modal-tambah-pegawai">Tambah Pegawai</button>
                         </div>
                     </div>
                 </div>
@@ -261,12 +262,44 @@
 
     <div class="overlay"></div>
 
+    <!-- bagian modal -->
+    <div class="modal fade" id="modal-tambah-pegawai" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Tambah Pegawai</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="form-tambah-pegawai">
+                        <div class="form-group">
+                            <label for="contoh-inputan-1" class="col-form-label">Inputan 1:</label>
+                            <input type="text" class="form-control" id="contoh-inputan-1">
+                        </div>
+                        <div class="form-group">
+                            <label for="contoh-textarea-1" class="col-form-label">Text Area 1:</label>
+                            <textarea class="form-control" id="contoh-textarea-1"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
+                    <button type="submit" form="form-tambah-pegawai" value="Submit" class="btn btn-primary">Tambah
+                        Pegawai</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js">
+    </script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 
