Fungsi login dan penambahan kunci OAuth2 ke locsto

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <br>
 
                     <div class="row">
-                        <form id="login-form" class="login-form" novalidate>
+                        <form id="login-form" class="login-form" novalidate method="POST">
                             <div class="form-group">
                                 <label for="input-username">Username</label>
                                 <input type="text" class="form-control" id="input-username" placeholder="Username"
@@ -90,6 +90,8 @@
         crossorigin="anonymous"></script> -->
 
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="./js/login.js"></script>
 </body>
 
